@@ -1,5 +1,10 @@
 2010-08-26  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-circulate-mode.lisp (circulate-loop-function):
+	Use is-a-key-pressed-p.
+
+	* src/xlib-util.lisp (is-a-key-pressed-p): New predicate.
+
 	* src/clfswm-keys.lisp (define-ungrab/grab): Use all values
 	returned by xlib:keysym->keycodes.
 
